Bug 93263 - Pivot table forget subtotal settings on changes
Summary: Pivot table forget subtotal settings on changes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.2 rc
Hardware: Other All
: high critical
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.2.0 target:5.1.0.1
Keywords: bibisectRequest, regression
: 94798 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-08 06:39 UTC by andis.lazdins
Modified: 2016-10-25 19:11 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Example demonstrating how piwot table forgets Subtotals settings (22.64 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-08-08 06:39 UTC, andis.lazdins
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andis.lazdins 2015-08-08 06:39:28 UTC
Created attachment 117765 [details]
Example demonstrating how piwot table forgets Subtotals settings

This regression appears in 5.0.0.5; however, it was introduced already in 4.4.X or even earlier.

Steps to repeat:

1. Create pivot table, like in sample file and set automatic subtotals for the field "Nogabals".
2. After accepting changes we can see subtotals rows for the field "Nogabals".
3. Subtotals persist during refreshing of pivot table.
4. Now click mouse right button somewhere in pivot table and select Edit Layout...
5. Change Data Field options from Min to Average or just click OK without changing anything.
6. Subtotals rows disappear even without changing anything in pivot table structure.

So the Subtotals should be set every time on editing Pivot table structure. In earlier versions Subtotals survived after changing structure of pivot table, which, I suppose, is normal behaviour.
Comment 1 raal 2015-08-21 14:13:11 UTC
Reproducible with Version: 5.1.0.0.alpha1+
Build ID: 6b7354ae66db40246a09e00aa876443057655a43
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-08-19_01:05:16

No repro with LibreOffice 3.5.0 Build ID: d6cde02, regression.
Comment 2 m_a_riosv 2015-09-12 10:46:01 UTC
I think it's right ups the importance, when subtotals are needed, makes really difficult the work, and too easy to lose data.
Comment 3 raal 2015-09-30 06:58:25 UTC
bibisect-win32-5.0, oldest version contains bug too, so bug is younger
git checkout oldest: Version: 4.5.0.0.alpha0+
Build ID: 57d6b92b69a31260dea0d84fcd1fc5866ada7adb
Comment 4 m_a_riosv 2015-10-08 01:51:07 UTC
*** Bug 94798 has been marked as a duplicate of this bug. ***
Comment 5 m_a_riosv 2015-10-26 21:52:31 UTC
Reproducible with:
Version: 5.1.0.0.alpha1 (x64)
Build ID: 0b48731919433e46e4fda7e5a5ca27c08c28b981-GL
Comment 6 Andras Timar 2015-11-08 22:00:55 UTC
> This regression appears in 5.0.0.5; however, it was introduced already in 4.4.X or even earlier.

Yes, it was introduced in 4.3, and may be related to Pivot table UI rework.
Comment 7 Commit Notification 2015-12-10 17:25:38 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0bfa6ddc99710c1e166140f97cf3212348d04d05

tdf#93263: Take function mask from ScPivotField

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-12-10 18:19:01 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b6656993429cd18e8a31825de45c9515f93cd0cd&h=libreoffice-5-1

tdf#93263: Take function mask from ScPivotField

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Katarina Behrens (Inactive) 2015-12-10 23:42:51 UTC
Fixed then
Comment 10 Robinson Tryon (qubit) 2015-12-17 10:30:36 UTC Comment hidden (obsolete)