tdf#93263: Take function mask from ScPivotField

and not from ScDPLabelData (that's what old code used to do as well).
Afaics ScDPLabelData.mnFuncMask member is never modified as the array
gets populated in ScDPObject::FillLabelDataForDimension. UI has thus
only its default value (PIVOT_FUNC_NONE) and so subtotals get reset
on every change.

ScPivotField however contains the right func mask, so take it from
there.

Change-Id: I862be121683aac079e788ce535f714ac8cdbcd0b
Reviewed-on: https://gerrit.libreoffice.org/20041
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>